--- a/_pages/page-archive.html
+++ b/_pages/page-archive.html
@@ -9,3 +9,5 @@ author_profile: false
 {% for post in site.pages %}
   {% include archive-single.html %}
 {% endfor %}
+
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=95kn_whFuE6HBnSKgIFQbHxyNzkKkP7lZ6Zdg6sKxRg"></script>
